[package]
description = "Created with Anchor"
edition = "2021"
name = "swap"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "swap"

[features]
anchor-debug = []
cpi = ["no-entrypoint"]
custom-heap = []
custom-panic = []
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
anchor-spl = "0.30.1"
solana-program = "=2.0.3"
